--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-  <title>Angular & Webpack demystified</title>
+  <title>Angular Sample Application</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,300">
   <link rel="stylesheet" href="static/styles/main.css">
 </head>
